--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,9 +12,7 @@
     </style>
 </head>
 <body class="bg-amber-50">
-   <header>
-        <img src="{% static 'home/images/logo.png' %}" alt="{{ restaurant_name }} Logo" class="logo">
-        <h1>Welcome to {{ restaurant_name }}</h1>
+    <header class="bg-red-800 text-white py-8">
     </header>
     <main class="container mx-auto px-4 py-12">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
